# postfixcalc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: testing.yml
plumacalc/: __init__.py  __main__.py  parser.py  pyeval.py  typings.py
postfixcalc/: __init__.py  __main__.py  ast_parser.py  calcobject.py  parser.py  pyeval.py  typings.py
tests/: test_calc.py  test_evaluate.py  test_make_num.py  test_parser.py
tests/test_parser/: test_black_format.py  test_concat_dots.py  test_evaluate.py  test_infix_to_postfix.py  test_make_num.py  test_parser.py
