[tool.poetry]
name = "postfixcalc"
version = "0.8.2"
description = "the stupid postfix evaluator"
authors = ["Mahdi Haghverdi <mahdihaghverdiliewpl@gmail.com>"]
license = "Apache2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.12.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.982"
flake8 = "^6.0.0"
autoflake = "^2.0.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
